Scroll lag on mobile FIX

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,7 +72,7 @@ body {
   width: 100%;
   margin: 0;
   overscroll-behavior: none;
-  touch-action: none;
+  touch-action: pan-y;
 }
 
 .noise {
